deploy: 834c32d9ffe19da613ebcf1c54bc392249cd30b0

--- a/print.html
+++ b/print.html
@@ -1413,6 +1413,7 @@ anything.</p>
 <p>Unzip</p>
 <ul>
 <li><code>neovide.AppImage.zip</code></li>
+<li><code>neovide.AppImage.zsync.zip</code></li>
 <li><code>neovide.msi.zip</code></li>
 <li><code>neovide-linux-x86_64.tar.gz.zip</code></li>
 </ul>
