--- a/maintainer-cookbook.html
+++ b/maintainer-cookbook.html
@@ -274,6 +274,7 @@ anything.</p>
 <p>Unzip</p>
 <ul>
 <li><code>neovide.AppImage.zip</code></li>
+<li><code>neovide.AppImage.zsync.zip</code></li>
 <li><code>neovide.msi.zip</code></li>
 <li><code>neovide-linux-x86_64.tar.gz.zip</code></li>
 </ul>
