--- a/faq.html
+++ b/faq.html
@@ -164,14 +164,13 @@ vim.api.nvim_set_keymap('!', '&lt;D-v&gt;', '&lt;C-R&gt;+', { noremap = true, si
 vim.api.nvim_set_keymap('t', '&lt;D-v&gt;', '&lt;C-R&gt;+', { noremap = true, silent = true})
 vim.api.nvim_set_keymap('v', '&lt;D-v&gt;', '&lt;C-R&gt;+', { noremap = true, silent = true})
 </code></pre>
-<h2 id="how-to-enable-scrolling-animations-and-transparency"><a class="header" href="#how-to-enable-scrolling-animations-and-transparency">How To Enable Scrolling Animations and Transparency?</a></h2>
-<p>First, <a href="command-line-reference.html#multigrid">enable multigrid</a>, it's not enabled by default.</p>
-<p>Then, scrolling animations should work, for transparency see the section below.</p>
 <h2 id="how-to-enable-floating-and-popupmenu-transparency"><a class="header" href="#how-to-enable-floating-and-popupmenu-transparency">How To Enable Floating And Popupmenu Transparency?</a></h2>
 <p>Those are controlled through the <code>winblend</code> and <code>pumblend</code> options. See their help pages for more,
 but for short: Both options can be values between <code>0</code> (opaque) and <code>100</code> (fully transparent),
 inclusively on both ends. <code>winblend</code> controls the background for floating windows, <code>pumblend</code> the
 one for the popup menu.</p>
+<p>telescope.nvim is different here though. Instead of using the global <code>winblend</code> option, it has its
+own <code>telescope.defaults.winblend</code> configuration option, see <a href="https://github.com/neovide/neovide/issues/1626#issuecomment-1701080545">this comment in #1626</a>.</p>
 <h2 id="how-can-i-dynamically-change-the-scale-at-runtime"><a class="header" href="#how-can-i-dynamically-change-the-scale-at-runtime">How Can I Dynamically Change The Scale At Runtime?</a></h2>
 <p>Neovide offers the setting <code>g:neovide_scale_factor</code>, which is multiplied with
 the OS scale factor and the font size. So using this could look like</p>
@@ -255,6 +254,10 @@ Neovide.</p>
 not yet supported, but you can work around that either by disabling IME or
 configuring it to only be enabled in insert mode. See
 <a href="configuration.html">Configuration</a>.</p>
+<h2 id="font-size-is-weird-with-high-dpi-display-on-x11"><a class="header" href="#font-size-is-weird-with-high-dpi-display-on-x11">Font size is weird with high dpi display on x11</a></h2>
+<p>Winit looks in multiple locations for the configured dpi.
+Make sure its set in at least one of them. More details
+here: <a href="https://github.com/neovide/neovide/issues/2010#issuecomment-1704416685">#2010</a>.</p>
 
                     </main>
 
