--- a/maintainer-cookbook.html
+++ b/maintainer-cookbook.html
@@ -243,14 +243,15 @@ been mentioned</li>
 <li>
 <p>Bump the version to match the tag name everywhere</p>
 <ul>
-<li><code>Cargo.toml</code></li>
+<li><code>Cargo.toml</code> (do note it contains the version <em>twice</em>, one time in the
+top, one time at the bottom in the bundling section)</li>
 <li><code>snap/snapcraft.yaml</code></li>
 <li><code>website/docs/*.md</code> and update <code>Unreleased yet</code> to <code>Available since $tag</code>
 (where <code>$tag</code> is the tag name)</li>
 </ul>
 </li>
 <li>
-<p>Run <code>cargo build</code> and make sure it succeeds, <strong>remember to <code>git add Cargo.lock</code> to make sure releases stay reproducable
+<p>Run <code>cargo build</code> and make sure it succeeds, <strong>remember to <code>git add Cargo.lock</code> to make sure releases stay reproducible
 (<a href="https://github.com/neovide/neovide/issues/1628">#1628</a>,
 <a href="https://github.com/neovide/neovide/issues/1482">#1482</a>)</strong></p>
 </li>
