--- a/command-line-reference.html
+++ b/command-line-reference.html
@@ -185,7 +185,7 @@ covering up the entire screen.</p>
 <pre><code class="language-sh">--grid [&lt;columns&gt;x&lt;lines&gt;]
 
 </code></pre>
-<p><strong>Unreleased yet.</strong></p>
+<p><strong>Available since 0.12.0.</strong></p>
 <p>Sets the initial grid size of the window. If no value is given, it defaults to
 columns/lines from <code>init.vim/lua</code>, see
 <a href="https://neovim.io/doc/user/options.html#&#x27;columns&#x27;">columns</a> and
@@ -212,7 +212,7 @@ containing trace events which may help debug an issue.</p>
 backgrounds, smooth scrolling, and window animations. This can solve some issues where neovide
 acts differently from terminal neovim.</p>
 <h3 id="no-fork"><a class="header" href="#no-fork">No Fork</a></h3>
-<pre><code class="language-sh">--no-fork
+<pre><code class="language-sh">--no-fork or $NEOVIDE_FORK=0|1
 </code></pre>
 <p>By default, neovide detaches itself from the terminal. Instead of spawning a child process and
 leaking it, be &quot;blocking&quot; and have the shell directly as parent process.</p>
