--- a/print.html
+++ b/print.html
@@ -614,7 +614,7 @@ vim.g.neovide_floating_z_height = 10
 vim.g.neovide_light_angle_degrees = 45
 vim.g.neovide_light_radius = 5
 </code></pre>
-<p><strong>Unreleased yet.</strong></p>
+<p><strong>Available since 0.12.0.</strong></p>
 <p>Setting <code>g:neovide_floating_shadow</code> to false will disable the shadow borders for floating windows.
 The other variables configure the shadow in various ways:</p>
 <ul>
@@ -643,7 +643,7 @@ to that value.</p>
 not completely accurate and might depend slightly on have far you scroll, so experimenting is
 encouraged in order to tune it to your liking.</p>
 <h4 id="far-scroll-lines"><a class="header" href="#far-scroll-lines">Far scroll lines</a></h4>
-<p><strong>Unreleased yet.</strong></p>
+<p><strong>Available since 0.12.0.</strong></p>
 <p>VimScript:</p>
 <pre><code class="language-vim">let g:neovide_scroll_animation_far_lines = 1
 </code></pre>
@@ -670,7 +670,7 @@ mouse makes it visible again.</p>
 <p>Lua:</p>
 <pre><code class="language-lua">vim.g.neovide_underline_stroke_scale = 1.0
 </code></pre>
-<p><strong>Unrelease yet.</strong></p>
+<p><strong>Available since 0.12.0.</strong></p>
 <p>Setting <code>g:neovide_underline_stroke_scale</code> to a floating point will increase or decrease the stroke
 width of the underlines (including undercurl, underdash, etc.). If the scaled stroke width is less
 than 1, it is clamped to 1 to prevent strange aliasing.</p>
@@ -687,6 +687,19 @@ clipped by the line of text below.</p>
 <p>Set the <a href="https://neovim.io/doc/user/options.html#&#x27;background&#x27;"><code>background</code></a> option when Neovide
 starts. Possible values: <em>light</em>, <em>dark</em>, <em>auto</em>. On systems that support it, <em>auto</em> will mirror the
 system theme, and will update <code>background</code> when the system theme changes.</p>
+<h4 id="fix-border-and-winbar-scrolling-glitches"><a class="header" href="#fix-border-and-winbar-scrolling-glitches">Fix border and winbar scrolling glitches</a></h4>
+<p>VimScript:</p>
+<pre><code class="language-vim">let g:neovide_unlink_border_highlights = v:true
+</code></pre>
+<p>Lua:</p>
+<pre><code class="language-lua">vim.g.neovide_unlink_border_highlights = true
+</code></pre>
+<p><strong>Available since 0.12.0.</strong></p>
+<p>Neovide uses some highlight groups for detecting the border of the windows, when scrolling. This
+detection is not perfect due to some limitations of Neovim, it only returns the final highlight
+groups for linked highlights. This option unlinks those highlight groups after the color scheme is
+loaded to make Neovide detect them properly.</p>
+<p>If this causes other problems, you can set this option to false.</p>
 <h3 id="functionality"><a class="header" href="#functionality">Functionality</a></h3>
 <h4 id="refresh-rate"><a class="header" href="#refresh-rate">Refresh Rate</a></h4>
 <p>VimScript:</p>
@@ -1059,7 +1072,7 @@ covering up the entire screen.</p>
 <pre><code class="language-sh">--grid [&lt;columns&gt;x&lt;lines&gt;]
 
 </code></pre>
-<p><strong>Unreleased yet.</strong></p>
+<p><strong>Available since 0.12.0.</strong></p>
 <p>Sets the initial grid size of the window. If no value is given, it defaults to
 columns/lines from <code>init.vim/lua</code>, see
 <a href="https://neovim.io/doc/user/options.html#&#x27;columns&#x27;">columns</a> and
@@ -1086,7 +1099,7 @@ containing trace events which may help debug an issue.</p>
 backgrounds, smooth scrolling, and window animations. This can solve some issues where neovide
 acts differently from terminal neovim.</p>
 <h3 id="no-fork"><a class="header" href="#no-fork">No Fork</a></h3>
-<pre><code class="language-sh">--no-fork
+<pre><code class="language-sh">--no-fork or $NEOVIDE_FORK=0|1
 </code></pre>
 <p>By default, neovide detaches itself from the terminal. Instead of spawning a child process and
 leaking it, be &quot;blocking&quot; and have the shell directly as parent process.</p>
