deploy: bbb26e84ac0d76a44ec71c53f7e104bc37054b9a

--- a/configuration.html
+++ b/configuration.html
@@ -169,7 +169,8 @@ end
 <p>Lua:</p>
 <pre><code class="language-lua">vim.o.guifont = &quot;Source Code Pro:h14&quot; -- text below applies for VimScript
 </code></pre>
-<p>Controls the font used by Neovide. Only setting which is actually controlled through an option, and
+<p>Controls the font used by Neovide. Also check <a href="./config-file.html">the config file</a> to see how to
+configure features. This is the only setting which is actually controlled through an option, and
 as such it's also documented in <code>:h guifont</code>. But to sum it up and also add Neovide's extension:</p>
 <ul>
 <li>The basic format is <code>Primary\ Font,Fallback\ Font\ 1,Fallback\ Font\ 2:option1:option2:option3</code>,
