--- a/print.html
+++ b/print.html
@@ -476,7 +476,8 @@ end
 <p>Lua:</p>
 <pre><code class="language-lua">vim.o.guifont = &quot;Source Code Pro:h14&quot; -- text below applies for VimScript
 </code></pre>
-<p>Controls the font used by Neovide. Only setting which is actually controlled through an option, and
+<p>Controls the font used by Neovide. Also check <a href="./config-file.html">the config file</a> to see how to
+configure features. This is the only setting which is actually controlled through an option, and
 as such it's also documented in <code>:h guifont</code>. But to sum it up and also add Neovide's extension:</p>
 <ul>
 <li>The basic format is <code>Primary\ Font,Fallback\ Font\ 1,Fallback\ Font\ 2:option1:option2:option3</code>,
@@ -1160,8 +1161,12 @@ Wayland, depending on what you are running on.</p>
 <p><strong>Available since 0.11.0.</strong></p>
 <p>Neovide also support configuration through a config file in <a href="https://toml.io">the toml format</a>.</p>
 <h2 id="settings-priority"><a class="header" href="#settings-priority">Settings priority</a></h2>
-<p>Settings specified in the config file override settings from the environment variables, but are
-overridden by command line arguments.</p>
+<p>There are two types of settings:</p>
+<ol>
+<li>Settings override these settings from the environment variables, but they can be overridden
+by command line arguments.</li>
+<li>Runtime settings. These settings can be hot-reloaded in runtime.</li>
+</ol>
 <h2 id="location"><a class="header" href="#location">Location</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Platform</th><th>Location</th></tr></thead><tbody>
 <tr><td>Linux</td><td><code>$XDG_CONFIG_HOME/neovide/config.toml</code> or <code>$HOME/.config/neovide/config.toml</code></td></tr>
@@ -1180,7 +1185,71 @@ idle = true
 neovim-bin = &quot;/usr/bin/nvim&quot; # in reality found dynamically on $PATH if unset
 frame = &quot;full&quot;
 </code></pre>
-<p>See <a href="command-line-reference.html">Command Line Reference</a> for details on what those settings do.</p>
+<p>Settings from environment variables can be found in <a href="command-line-reference.html">Command Line Reference</a>,
+see that doc for details on what those settings do.</p>
+<h3 id="runtime-settings"><a class="header" href="#runtime-settings">Runtime settings</a></h3>
+<h4 id="font-1"><a class="header" href="#font-1"><code>Font</code></a></h4>
+<p><strong>Available since 0.12.1.</strong></p>
+<p><code>[font]</code> table in configuration file contains:</p>
+<ul>
+<li><code>normal</code>: required, <code>FontDescription</code></li>
+<li><code>bold</code>: optional, <code>SecondaryFontDescription</code></li>
+<li><code>italic</code>: optional, <code>SecondaryFontDescription</code></li>
+<li><code>bold_italic</code>: optional, <code>SecondaryFontDescription</code></li>
+<li><code>features</code>: optional, <code>{ &quot;&lt;font&gt;&quot; = [&quot;&lt;string&gt;&quot;] }</code></li>
+<li><code>size</code>: required,</li>
+<li><code>width</code>: optional,</li>
+<li><code>allow_float_size</code>: optional,</li>
+<li><code>hinting</code>: optional,</li>
+<li><code>edging</code>: optional,</li>
+</ul>
+<p>Settings <code>size</code>, <code>width</code>, <code>allow_float_size</code>, <code>hinting</code> and <code>edging</code> can be found in
+<a href="configuration.html">Configuration</a>.</p>
+<ul>
+<li><code>FontDescription</code> can be:
+<ul>
+<li>a table with two keys <code>family</code> and <code>style</code>, <code>family</code> is required, <code>style</code> is optional,</li>
+<li>a string, indicate the font family,</li>
+<li>an array of string or tables in previous two forms.</li>
+</ul>
+</li>
+<li><code>SecondaryFontDescription</code> can be:
+<ul>
+<li>a table with two keys <code>family</code> and <code>style</code>, both are optional,</li>
+<li>a string, indicate the font family,</li>
+<li>an array of string or tables in previous two forms.</li>
+</ul>
+</li>
+<li>Font styles consist of zero or more space separated parts, each parts can be:
+<ul>
+<li>pre-defined style name
+<ul>
+<li>weight: <code>Thin</code>, <code>ExtraLight</code>, <code>Light</code>, <code>Normal</code>, <code>Medium</code>, <code>SemiBold</code>, <code>Bold</code>,
+<code>ExtraBold</code>, <code>Black</code>, <code>ExtraBlack</code></li>
+<li>slant: <code>Italic</code>, <code>Oblique</code></li>
+</ul>
+</li>
+<li>variable font weight: <code>W&lt;weight&gt;</code>, e.g. <code>W100</code>, <code>W200</code>, <code>W300</code>, <code>W400</code>, <code>W500</code>, <code>W600</code>,
+<code>W700</code>, <code>W800</code>, <code>W900</code></li>
+</ul>
+</li>
+<li>Font features are a table with font family as key and an array of string as value, each
+string is a font feature.
+<ul>
+<li>Font feature is a string with format <code>+&lt;feature&gt;</code>, <code>-&lt;feature&gt;</code> or <code>&lt;feature&gt;=&lt;value&gt;</code>,
+e.g. <code>+ss01</code>, <code>-calt</code>, <code>ss02=2</code>. <code>+&lt;feature&gt;</code> is a shorthand for <code>&lt;feature&gt;=1</code>,
+<code>-&lt;feature&gt;</code> is a shorthand for <code>&lt;feature&gt;=0</code>.</li>
+</ul>
+</li>
+</ul>
+<p>Example:</p>
+<pre><code class="language-toml">[font]
+normal = [&quot;MonoLisa Nerd Font&quot;]
+size = 18
+
+[font.features]
+MonoLisa = [ &quot;+ss01&quot;, &quot;+ss07&quot;, &quot;+ss11&quot;, &quot;-calt&quot;, &quot;+ss09&quot;, &quot;+ss02&quot;, &quot;+ss14&quot;, &quot;+ss16&quot;, &quot;+ss17&quot; ]
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="editing-w-external-tools"><a class="header" href="#editing-w-external-tools">Editing w/ External Tools</a></h1>
 <p>You can use Neovide in other programs as editor, this page aims to document some quirks. Support for
 that, however, is only possible as far as reasonably debuggable.</p>
