--- a/configuration.html
+++ b/configuration.html
@@ -259,7 +259,11 @@ vim.g.neovide_padding_left = 0
 <p><strong>Available since 0.10.4.</strong></p>
 <p>Controls the space between the window border and the actual Neovim, which is filled with the
 background color instead.</p>
-<h4 id="background-color-currently-macos-only"><a class="header" href="#background-color-currently-macos-only">Background Color (Currently macOS only)</a></h4>
+<h4 id="background-color-deprecated-currently-macos-only"><a class="header" href="#background-color-deprecated-currently-macos-only">Background Color (<strong>Deprecated</strong>, Currently macOS only)</a></h4>
+<p>This configuration is deprecated now and might be removed in the future. In
+<a href="https://github.com/neovide/neovide/issues/2168">#2168</a>, we have made Neovide control the title bar
+color itself. The color of title bar now honors <a href="#transparency"><code>neovide_transparency</code></a>. If you want
+a transparent title bar, setting <code>neovide_transparency</code> is sufficient.</p>
 <p>VimScript:</p>
 <pre><code class="language-vim">&quot; g:neovide_transparency should be 0 if you want to unify transparency of content and title bar.
 let g:neovide_transparency = 0.0
@@ -276,13 +280,24 @@ vim.g.neovide_transparency = 0.0
 vim.g.transparency = 0.8
 vim.g.neovide_background_color = &quot;#0f1117&quot; .. alpha()
 </code></pre>
-<p><strong>Available since 0.10.</strong></p>
+<p><strong>Available since 0.10.</strong>
+<strong>Deprecated in 0.12.2.</strong></p>
 <p><img src="assets/BackgroundColor.png" alt="BackgroundColor" /></p>
 <p>Setting <code>g:neovide_background_color</code> to a value that can be parsed by
 <a href="https://github.com/mazznoer/csscolorparser-rs">csscolorparser-rs</a> will set the color of the whole
 window to that value.</p>
 <p>Note that <code>g:neovide_transparency</code> should be 0 if you want to unify transparency of content and
 title bar.</p>
+<h4 id="window-blur-currently-macos-only"><a class="header" href="#window-blur-currently-macos-only">Window Blur (Currently macOS only)</a></h4>
+<p>VimScript:</p>
+<pre><code class="language-vim">let g:neovide_window_blurred = v:true
+</code></pre>
+<p>Lua:</p>
+<pre><code class="language-lua">vim.g.neovide_window_blurred = true
+</code></pre>
+<p><strong>Available since 0.12.</strong></p>
+<p>Setting <code>g:neovide_window_blurred</code> toggles the window blur state.</p>
+<p>The blurred level respects the <code>g:neovide_transparency</code>  value between 0.0 and 1.0.</p>
 <h4 id="floating-blur-amount"><a class="header" href="#floating-blur-amount">Floating Blur Amount</a></h4>
 <p>VimScript:</p>
 <pre><code class="language-vim">let g:neovide_floating_blur_amount_x = 2.0
